--- a/templates/pm25.html
+++ b/templates/pm25.html
@@ -21,14 +21,19 @@
 
         }
 
+        #table-container {
+
+            height: 800px;
+            overflow-y: auto;
+        }
+
         table {
             border: ipx solid black;
             border-collapse: collapse;
             margin: 10px auto;
             text-align: center;
             padding: 10px;
-            width: 80%;
-
+            width: 60%;
         }
 
         th {
@@ -53,29 +58,30 @@
 <body>
 
     <div id="title"><b>全省PM2.5數據</b></div>
-    <table border="1">
-        <thead>
-            <tr>
-                {% for col in cols %}
-                <th>{{col}}</th>
+    <div id="table-container">
+        <table border="1">
+            <thead>
+                <tr>
+                    {% for col in cols %}
+                    <th>{{col}}</th>
+                    {% endfor %}
+                </tr>
+            </thead>
+
+            <tbody>
+                {% for value in values %}
+                <tr>
+                    {% for i in value %}
+                    <td>{{i}}</td>
+                    {% endfor %}
+                </tr>
                 {% endfor %}
-            </tr>
-        </thead>
-
-        <tbody>
-            {% for value in values %}
-            <tr>
-                {% for i in value %}
-                <td>{{i}}</td>
-                {% endfor %}
-            </tr>
-            {% endfor %}
 
 
 
-        </tbody>
-    </table>
-
+            </tbody>
+        </table>
+    </div>
 </body>
 
 </html>
