完成chart圖形繪製

--- a/templates/pm25.html
+++ b/templates/pm25.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PM2.5</title>
+    <title>PM2.5表格</title>
     <style>
         body {
             background-color: rgb(188, 240, 241);
@@ -21,8 +21,8 @@
 
         }
 
+        /* 設定表格卷軸 */
         #table-container {
-
             height: 800px;
             overflow-y: auto;
         }
