新增index.html的表格與圖形超連結

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
 <body>
     <h1>hi~ {{username}}</h1>
     <p class="time">現在時間: {{time}}</p>
-
-
+    <a href="/pm25-charts" target="_blank">PM25圖形</a><br>
+    <a href="/pm25" target="_blank">PM25表格</a>
 
 
 </body>
