新增更新資料按紐的loading圖示

--- a/templates/pm25-charts.html
+++ b/templates/pm25-charts.html
@@ -25,7 +25,7 @@
         <div id="pm25_low_value" class="value"> PM2.5 :數值</div>
     </div>
 
-    <button class="button">
+    <button id="update" class="button">
         更新資料
     </button>
 
