--- a/templates/pm25-charts.html
+++ b/templates/pm25-charts.html
@@ -10,6 +10,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.2.2/echarts.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="../static/css/main.css">
+    <!-- 後引用 會先顯示 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+
 </head>
 
 <body>
@@ -25,7 +28,8 @@
         <div id="pm25_low_value" class="value"> PM2.5 :數值</div>
     </div>
 
-    <button id="update" class="button">
+    <!-- button is-link 為css外部引用網站的顏色 -->
+    <button id="update" class="button is-link">
         更新資料
     </button>
 
